  makes a lot of plugins work with terminatorX that haven't worked with previous
  releases.
- data send to the JACK backend no goes through the "Anti-Clip-Device", too. 
  Unless you #define TX_DO_CLIP of course.
- I've drawn some new icons with the wonderful inkscape. They're now being 
  built into terminatorX as gdk-pixbuf c-source code, so they actually do alpha
  blending.
- merged parts of a patch from Adam King <aking@lgh.com.au>
  - Simple min/maximization for the control panels
  - Bugfix for sequencer menu crash
  - TODO: complete this entry?
- created some new icons for the GUI with the cool inkscape. 
- added cpu-overload detection - currently disabled

[v3.81]
- JACK doesn't seem to like SCHED_FIFO clients so I added a little test that
  will set SCHED_OTHER when jack output was selected. This will work for true
  root or a capabilities-enabled suid-root binary only.
- removed the disfunctional "Cancel" button from the load-progress dialog.
- switched default MIDI mapping to non-destructive. (previous settings will not
  be overwritten now).
- added a default MIDI mapping accessible via the "Turntables" menu. The actual
  mapping is documented in the manual.
- fixed a bug that caused enabling sync-client setting via MIDI to fail.
- when compiled with rt-scheduling suppport terminatorX will now display the 
  resulting scheduling policy in the "About" dialog.
- if terminatorX was setup to use realtime priority for the audio engine thread
  but you dont want it - disable realtime scheduling in the Preferences dialog.
  This works with capabilities _ONLY_.
- if you don't want to confirm program termination every time you can now
  disable "Ask for Quit confirmation" in the Preferences.
- added support for Linux' POSIX capabilities. This allows a suid-root installed
  terminatorX binary to drop root privileges much earlier than with the old
  approach (so it should be more secure). Requires the libcap library.